--- a/app/views/set_seasons/index.html.erb
+++ b/app/views/set_seasons/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'Create New Season', new_set_season_path, class:'button has-text-white orange mb-2' %>
+<%= link_to 'Create New Season', new_set_season_path, class:'button has-text-white btn-orange mb-2' %>
 <div class='box orange'>
   <div class="columns is-centered">
     <div class="column is-6">
