--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -97,7 +97,7 @@
             </div>
             <div class="column is-3">
               <h5>Category</h5>
-              <%= user.Category %>
+              <%= user.category %>
             </div>
           </div>
         </div>
