--- a/app/views/deduction_tables/_form.html.erb
+++ b/app/views/deduction_tables/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Month, class:"label" %>
+    <%= form.label :month, class:"label" %>
     <div class="control">
-      <%= form.text_field :Month, class:"input" %>
+      <%= form.text_field :month, class:"input" %>
     </div>
   </div>
 
