--- a/app/views/deduction_tables/new.html.erb
+++ b/app/views/deduction_tables/new.html.erb
@@ -81,9 +81,9 @@
         <div class="columns">
           <div class="column is-3">
             <div class="field">
-              <%= form.label :Farm_Name, class:"label" %>
+              <%= form.label :farm_name, class:"label" %>
               <div class="control">
-                <%= form.text_field :Farm_Name, class:"input" %>
+                <%= form.text_field :farm_name, class:"input" %>
               </div>
             </div>
           </div>
@@ -97,17 +97,17 @@
           </div>
           <div class="column is-3">
             <div class="field">
-              <%= form.label :Season, class:"label" %>
+              <%= form.label :season, class:"label" %>
               <div class="control">
-                <%= form.text_field :Season, class:"input" %>
+                <%= form.text_field :season, class:"input" %>
               </div>
             </div>
           </div>
           <div class="column is-3">
             <div class="field">
-              <%= form.label :Month, class:"label" %>
+              <%= form.label :month, class:"label" %>
               <div class="control">
-                <%= form.text_field :Month, class:"input" %>
+                <%= form.text_field :month, class:"input" %>
               </div>
             </div>
           </div>
