--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -46,9 +46,9 @@
             </div>
 
               <div class="field">
-              <%= f.label :Company_Name, class:"label" %>
+              <%= f.label :company_name, class:"label" %>
               <div class="control">
-                <%= f.text_field :Company_Name, autocomplete: "Company_Name", class:"input" %>
+                <%= f.text_field :company_name, autocomplete: "Company_Name", class:"input" %>
               </div>
             </div>
 
@@ -67,23 +67,23 @@
             </div>
 
             <div class="field">
-              <%= f.label :Address %>
+              <%= f.label :address %>
               <div class="control">
-                <%= f.text_field :Address, autocomplete: "Address", class:"input" %>
+                <%= f.text_field :address, autocomplete: "Address", class:"input" %>
               </div>
             </div>
 
             <div class="field">
-              <%= f.label :Category, class:"label" %>
+              <%= f.label :category, class:"label" %>
               <div class="control">
-                <%= f.text_field :Category, autocomplete: ":Category", class:"input" %>
+                <%= f.text_field :category, autocomplete: ":Category", class:"input" %>
               </div>
             </div>
 
             <div class="field">
-              <%= f.label :Pro_Number, class:"label" %>
+              <%= f.label :pro_number, class:"label" %>
               <div class="control">
-                <%= f.text_field :Pro_Number, autocomplete: "Pro_Number", class:"input" %>
+                <%= f.text_field :pro_number, autocomplete: "Pro_Number", class:"input" %>
               </div>
             </div>
 
