--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,9 +34,9 @@
             </div>
 
             <div class="field">
-              <%= f.label :Company_Name, class:"label" %>
+              <%= f.label :company_name, class:"label" %>
               <div class="control">
-                <%= f.text_field :Company_Name, autocomplete: "Company_Name", class:"input" %>
+                <%= f.text_field :company_name, autocomplete: "Company_Name", class:"input" %>
               </div>
             </div>
 
@@ -55,27 +55,27 @@
             </div>
 
             <div class="field">
-              <%= f.label :Address, class:"label" %>
+              <%= f.label :address, class:"label" %>
               <div class="control">
-                <%= f.text_field :Address, autocomplete: "Address", class:"input" %>
+                <%= f.text_field :address, autocomplete: "Address", class:"input" %>
               </div>
             </div>
 
             <div class="field">
               <div class="columns">
                 <div class="column is-8 my-0">
-                  <%= f.label :Category, class:"label" %>
+                  <%= f.label :category, class:"label" %>
                 </div>
                 <div class="columns is-4 my-0">
-                  <%= f.select :Category, ["Advertiser", "Clerk", "Contractor", "Farmer", "Manager"], class:"my-3" %>
+                  <%= f.select :category, ["Advertiser", "Clerk", "Contractor", "Farmer", "Manager"], class:"my-3" %>
                 </div>
               </div>
             </div>
 
             <div class="field">
-              <%= f.label :Pro_Number, class:"label" %>
+              <%= f.label :pro_number, class:"label" %>
               <div class="control">
-                <%= f.text_field :Pro_Number, autocomplete: "Pro_Number", class:"input" %>
+                <%= f.text_field :pro_number, autocomplete: "Pro_Number", class:"input" %>
               </div>
             </div>
 
