--- a/app/views/land_names/_form.html.erb
+++ b/app/views/land_names/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="field">
     <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_Name, [current_user.company_name], class:"my-3" %>
     </div>
   </div>
 
