--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="field">
       <%= form.label :company_name, class:"label" %>
       <div class="control">
-        <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
+        <%= form.select :company_name, [current_user.company_name], class:"my-3" %>
       </div>
     </div>
 
