--- a/app/views/tobacco_sales/_form.html.erb
+++ b/app/views/tobacco_sales/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :company_name, class:"label" %>
-    <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+    <%= form.select :Company_Name, [current_user.company_name], class:"my-3" %>
   </div>
 
   <div class="field">
