--- a/app/views/wages/new.html.erb
+++ b/app/views/wages/new.html.erb
@@ -148,7 +148,7 @@
               Company Name
             </div>
             <div class="my-1 has-text-centered">
-              <%= form.select :company_name, [current_user.Company_Name] %>
+              <%= form.select :company_name, [current_user.company_name] %>
             </div>
           </div>
         </div>
