--- a/app/views/wages/_form.html.erb
+++ b/app/views/wages/_form.html.erb
@@ -49,7 +49,7 @@
   <div class="field">
     <%= form.label :days_worked, class:"label" %>
     <div class="control">
-      <%= form.text_field :days_worked, ['Permanent', 'Maricho'], class:"my-3" %>
+      <%= form.text_field :days_worked, class:"input" %>
     </div>
   </div>
 
@@ -121,6 +121,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-success" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
