--- a/app/views/wages/edit.html.erb
+++ b/app/views/wages/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Wage</h1>
+<div class="columns is-centered">
+  <div class="column is-8">
+    <div class="box outerdiv">
+      <h1>Editing Wage</h1>
 
-<%= render 'form', wage: @wage %>
+      <%= render 'form', wage: @wage %>
 
-<%= link_to 'Show', @wage %> |
-<%= link_to 'Back', wages_path %>
+      <%= link_to 'Show', @wage %> |
+      <%= link_to 'Back', wages_path %>
+    </div>
+  </div>
+</div>
