Add changes to tobacco sales pages

--- a/app/views/tobacco_sales/index.html.erb
+++ b/app/views/tobacco_sales/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Tobacco Sale', new_tobacco_sale_path, class:"button is-success my-3" %>
+<%= link_to 'New Tobacco Sale', new_tobacco_sale_path, class:"button btn-orange my-3" %>
 <h1>Tobacco Sales</h1>
 
 <% @tobacco_sales.each do |tobacco_sale| %>
