--- a/app/views/tobacco_sales/new.html.erb
+++ b/app/views/tobacco_sales/new.html.erb
@@ -1,13 +1,12 @@
-<div class="columns">
-  <div class="column">
-    <div class="card">
-      <div class="card-header">
-        <h1>New Tobacco Sale</h1>
-      </div>
+<div class="columns is-centered">
+  <div class="column is-6">
+    <div class="card outerdiv">
+        <h1 class="has-text-centered"><strong>......New Tobacco Sale......</strong></h1>
+
       <div class="card-content">
         <div class="content">
           <%= render 'form', tobacco_sale: @tobacco_sale %>
-          <%= link_to 'Back', tobacco_sales_path, class:"button is-dark" %>
+          <%= link_to 'Back', tobacco_sales_path, class:"button is-dark my-2" %>
         </div>
       </div>
     </div>
