--- a/app/views/tobacco_sales/_form.html.erb
+++ b/app/views/tobacco_sales/_form.html.erb
@@ -166,6 +166,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-info" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
