--- a/app/views/timebooks/_form.html.erb
+++ b/app/views/timebooks/_form.html.erb
@@ -52,6 +52,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-success" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
