--- a/app/views/timebooks/index.html.erb
+++ b/app/views/timebooks/index.html.erb
@@ -1,38 +1,42 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'New Timebook', new_timebook_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1>Timebooks</h1>
+<div class="columns is-centered">
+  <div class="column is-9">
+    <%= link_to 'New Timebook', new_timebook_path, class:"button btn-orange my-3" %>
+    <div class='box outerdiv'>
+      <h1>Timebooks</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Employee name</th>
-      <th>Employee number</th>
-      <th>Rate</th>
-      <th>Day</th>
-      <th>Gross</th>
-      <th>Season</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Employee name</th>
+            <th>Employee number</th>
+            <th>Rate</th>
+            <th>Day</th>
+            <th>Gross</th>
+            <th>Season</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-  <tbody>
-    <% @timebooks.each do |timebook| %>
-      <tr>
-        <td><%= timebook.date %></td>
-        <td><%= timebook.employee_name %></td>
-        <td><%= timebook.employee_number %></td>
-        <td><%= timebook.rate %></td>
-        <td><%= timebook.day %></td>
-        <td><%= timebook.gross %></td>
-        <td><%= timebook.season %></td>
-        <td><%= link_to 'Show', timebook %></td>
-        <td><%= link_to 'Edit', edit_timebook_path(timebook) %></td>
-        <td><%= link_to 'Destroy', timebook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+          <% @timebooks.each do |timebook| %>
+            <tr>
+              <td><%= timebook.date %></td>
+              <td><%= timebook.employee_name %></td>
+              <td><%= timebook.employee_number %></td>
+              <td><%= timebook.rate %></td>
+              <td><%= timebook.day %></td>
+              <td><%= timebook.gross %></td>
+              <td><%= timebook.season %></td>
+              <td><%= link_to 'Show', timebook %></td>
+              <td><%= link_to 'Edit', edit_timebook_path(timebook) %></td>
+              <td><%= link_to 'Destroy', timebook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
