Add changes to seedbeds

--- a/app/views/seedbeds/_form.html.erb
+++ b/app/views/seedbeds/_form.html.erb
@@ -54,13 +54,6 @@
   </div>
 
   <div class="field">
-    <%= form.label :quantity, class:"label" %>
-    <div class="control">
-      <%= form.text_field :quantity, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
     <%= form.label :unit, class:"label" %>
     <div class="control">
       <%= form.text_field :unit, class:"input" %>
@@ -93,6 +86,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-success" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
