--- a/app/views/seedbeds/edit.html.erb
+++ b/app/views/seedbeds/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Seedbed</h1>
+<div class="columns is-centered">
+  <div class="column is-6">
+  <div class="box outerdiv">
+    <h1>Editing Seedbed</h1>
 
-<%= render 'form', seedbed: @seedbed %>
+    <%= render 'form', seedbed: @seedbed %>
 
-<%= link_to 'Show', @seedbed %> |
-<%= link_to 'Back', seedbeds_path %>
+    <%= link_to 'Show', @seedbed %> |
+    <%= link_to 'Back', seedbeds_path %>
+  </div>
+  </div>
+</div>
