Add styles for rentals

--- a/app/views/rentals/edit.html.erb
+++ b/app/views/rentals/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Rental</h1>
+<div class="columns is-centered">
+  <div class="column is-6">
+    <div class="box outerdiv">
+      <h1 class="has-text-centered"><strong>Editing Rental</strong></h1>
 
-<%= render 'form', rental: @rental %>
+      <%= render 'form', rental: @rental %>
 
-<%= link_to 'Show', @rental %> |
-<%= link_to 'Back', rentals_path %>
+      <%= link_to 'Show', @rental %> |
+      <%= link_to 'Back', rentals_path %>
+    </div>
+  </div>
+</div>
