--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -56,6 +56,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-info" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
