--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Rental', new_rental_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Rentals</h1>
+<%= link_to 'New Rental', new_rental_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered"><strong>Rentals</strong></h1>
 
 <table class="table">
   <thead>
