--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,13 +1,13 @@
-<div class="columns">
-  <div class="column">
-    <div class="card">
-      <div class="card-header">
-        <h1>New Rental</h1>
-      </div>
+<div class="columns is-centered">
+  <div class="column is-6">
+    <div class="card outerdiv">
+
+      <h1 class="has-text-centered"><strong>New Rental</strong></h1>
+
       <div class="card-content">
         <div class="content">
           <%= render 'form', rental: @rental %>
-          <%= link_to 'Back', rentals_path, class:"button is-dark" %>
+          <%= link_to 'Back', rentals_path, class:"button is-dark mt-3" %>
         </div>
       </div>
     </div>
