Add changes to rainfalls

--- a/app/views/rainfalls/edit.html.erb
+++ b/app/views/rainfalls/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Rainfall</h1>
+<div class="columns is-centered">
+  <div class='column is-6'>
+    <div class="box outerdiv">
+      <h1 class="has-text-centered"><strong>Editing Rainfall</strong></h1>
 
-<%= render 'form', rainfall: @rainfall %>
+      <%= render 'form', rainfall: @rainfall %>
 
-<%= link_to 'Show', @rainfall %> |
-<%= link_to 'Back', rainfalls_path %>
+      <%= link_to 'Show', @rainfall %> |
+      <%= link_to 'Back', rainfalls_path %>
+    </div>
+  </div>
+</div>
