--- a/app/views/rainfalls/_form.html.erb
+++ b/app/views/rainfalls/_form.html.erb
@@ -65,6 +65,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-success" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
