Add more changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -119,6 +119,7 @@
           <li><%= link_to 'Field Days', field_days_path, class:"has-text-white" %></li>
           <li><%= link_to 'Weather Updates', weathers_path, class:"has-text-white" %></li>
           <li><%= link_to 'Set Season', set_seasons_path, class:"has-text-white" %></li>
+          <li><%= link_to 'Rainfall recordings', rainfalls_path, class:"has-text-white" %></li>
         </ul>
       </div>
     </div>
