--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,6 +130,19 @@ tr {
   }
 }
 
+.blink {
+  font-size: 19px;
+  font-weight: 900;
+  color: hsl(0, 95%, 22%);
+  animation: blinker 2s infinite;
+}
+
+@keyframes blinker {
+  from { opacity: 1.0;}
+  50% { opacity: 0.0; }
+  to {opacity: 1.0;}
+}
+
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
 @import '@fortawesome/fontawesome-free/scss/solid';
