--- a/app/views/input_stores_usages/bin.html.erb
+++ b/app/views/input_stores_usages/bin.html.erb
@@ -7,45 +7,51 @@
     <h1 class="has-text-centered"><strong>There is nothing to Show the Bin is Empty!!!!!!!!!!</strong></h1>
   </div>
 <% else %>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Company name</th>
-        <th>Season</th>
-        <th>Date</th>
-        <th>Farm name</th>
-        <th>Input name</th>
-        <th>Quantity used</th>
-        <th>Unit</th>
-        <th>Total amount</th>
-        <th>Profile number</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+  <div class="columns is-centered">
+    <div class="column is-11">
+      <div class='box outerdiv'>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Company name</th>
+              <th>Season</th>
+              <th>Date</th>
+              <th>Farm name</th>
+              <th>Input name</th>
+              <th>Quantity used</th>
+              <th>Unit</th>
+              <th>Total amount</th>
+              <th>Profile number</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-    <tbody>
-      <% @input_stores_usages_deleted.each do |input_stores_usage| %>
-        <tr>
-          <td><%= input_stores_usage.company_name %></td>
-          <td><%= input_stores_usage.season %></td>
-          <td><%= input_stores_usage.date %></td>
-          <td><%= input_stores_usage.farm_name %></td>
-          <td><%= input_stores_usage.input_name %></td>
-          <td><%= input_stores_usage.quantity_used %></td>
-          <td><%= input_stores_usage.unit %></td>
-          <td><%= input_stores_usage.total_amount %></td>
-          <td><%= input_stores_usage.profile_number %></td>
-          <td><%= link_to 'Show', input_stores_usage %></td>
-          <td>
-            <%= form_for input_stores_usage, :url =>[:restore_records, input_stores_usage], html: { method: :put } do |f| %>
-            <%= f.submit 'restore' %>
+          <tbody>
+            <% @input_stores_usages_deleted.each do |input_stores_usage| %>
+              <tr>
+                <td><%= input_stores_usage.company_name %></td>
+                <td><%= input_stores_usage.season %></td>
+                <td><%= input_stores_usage.date %></td>
+                <td><%= input_stores_usage.farm_name %></td>
+                <td><%= input_stores_usage.input_name %></td>
+                <td><%= input_stores_usage.quantity_used %></td>
+                <td><%= input_stores_usage.unit %></td>
+                <td><%= input_stores_usage.total_amount %></td>
+                <td><%= input_stores_usage.profile_number %></td>
+                <td><%= link_to 'Show', input_stores_usage %></td>
+                <td>
+                  <%= form_for input_stores_usage, :url =>[:restore_records, input_stores_usage], html: { method: :put } do |f| %>
+                  <%= f.submit 'restore' %>
+                  <% end %>
+                </td>
+                <td><%= link_to 'Destroy', input_stores_usage, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
             <% end %>
-          </td>
-          <td><%= link_to 'Destroy', input_stores_usage, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 <% end %>
 
-<%= link_to 'Back', input_stores_usages_path, class:"button is-dark" %>
+<%= link_to 'Back', input_stores_usages_path, class:"button is-dark mr-5" %>
