--- a/app/views/equipment_services/index.html.erb
+++ b/app/views/equipment_services/index.html.erb
@@ -18,7 +18,6 @@
       <th>Job</th>
       <th>Total amount</th>
       <th>Pro number</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,10 +25,10 @@
   <tbody>
     <% @equipment_services.each do |equipment_service| %>
       <tr>
-        <td><%= equipment_service.company_Name %></td>
+        <td><%= equipment_service.company_name %></td>
         <td><%= equipment_service.date %></td>
         <td><%= equipment_service.season %></td>
-        <td><%= equipment_service.type %></td>
+        <td><%= equipment_service.types %></td>
         <td><%= equipment_service.equipment_number %></td>
         <td><%= equipment_service.service_type %></td>
         <td><%= equipment_service.done_by %></td>
@@ -38,7 +37,6 @@
         <td><%= equipment_service.job %></td>
         <td><%= equipment_service.total_amount %></td>
         <td><%= equipment_service.pro_number %></td>
-        <td><%= equipment_service.user_id %></td>
         <td><%= link_to 'Show', equipment_service %></td>
         <td><%= link_to 'Edit', edit_equipment_service_path(equipment_service) %></td>
         <td><%= link_to 'Destroy', equipment_service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
