--- a/app/views/harvestings/index.html.erb
+++ b/app/views/harvestings/index.html.erb
@@ -6,7 +6,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Compnay name</th>
+      <th>Company name</th>
       <th>Date</th>
       <th>Season</th>
       <th>Farm name</th>
