--- a/app/views/input_stores_usages/_form.html.erb
+++ b/app/views/input_stores_usages/_form.html.erb
@@ -18,8 +18,7 @@
     </div>
 
     <div class="field">
-      <%= form.label :season, class:"label" %>
-      <%= form.text_field :season, class:"input" %>
+      <%= form.text_field :season, value: season_active, type: :hidden %>
     </div>
 
     <div class="field">
