--- a/app/views/input_stores_usages/new.html.erb
+++ b/app/views/input_stores_usages/new.html.erb
@@ -25,7 +25,7 @@
             </div>
 
             <div class="field">
-              <%= form.text_field :season, value: store.season, type: :hidden %>
+              <%= form.text_field :season, value: season_active, type: :hidden %>
             </div>
 
             <div class="field">
