--- a/app/views/timebooks/_form.html.erb
+++ b/app/views/timebooks/_form.html.erb
@@ -17,6 +17,16 @@
   </div>
 
   <div class="field">
+    <%= form.label :company_name, class:'label' %>
+    <%= form.text_field :company_name, class:'input' %>
+  </div>
+
+  <div class="field">
+    <%= form.label :farm_name, class:'label' %>
+    <%= form.text_field :farm_name, class:'input' %>
+  </div>
+
+  <div class="field">
     <%= form.label :employee_name, class:'label' %>
     <%= form.text_field :employee_name, class:'input' %>
   </div>
