--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -2,37 +2,37 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @workshop.Company_Name %>
+  <%= @workshop.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @workshop.Date %>
+  <%= @workshop.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @workshop.Season %>
+  <%= @workshop.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @workshop.Farm_Name %>
+  <%= @workshop.farm_name %>
 </p>
 
 <p>
   <strong>Item:</strong>
-  <%= @workshop.Item %>
+  <%= @workshop.item %>
 </p>
 
 <p>
   <strong>Quantity:</strong>
-  <%= @workshop.Quantity %>
+  <%= @workshop.quantity %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @workshop.Pro_Number %>
+  <%= @workshop.pro_number %>
 </p>
 
 <p>
