--- a/app/views/cereal_sales/_form.html.erb
+++ b/app/views/cereal_sales/_form.html.erb
@@ -26,10 +26,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :season, class:"label" %>
-      <%= form.text_field :season, class:"input" %>
-    <div class="control">
-    </div>
+    <%= form.text_field :season, value: season_active, type: :hidden %> 
   </div>
 
   <div class="field">
@@ -131,9 +128,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id, class:"label" %>
     <div class="control">
-      <%= form.text_field :user_id, class:"input" %>
+      <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
     </div>
   </div>
 
