--- a/app/views/cereal_stores/_form.html.erb
+++ b/app/views/cereal_stores/_form.html.erb
@@ -24,10 +24,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :season, class:"label" %>
-    <div class="control">
-      <%= form.text_field :season, class:"input" %>
-    </div>
+      <%= form.text_field :season, value: season_active, type: :hidden %>
   </div>
 
   <div class="field">
