--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -3,7 +3,7 @@
 <div class='box'>
 <h1>Deliveries</h1>
 
-<table class="has-background-white">
+<table class=" table has-background-white">
   <thead>
     <tr>
       <th>Company name</th>
@@ -17,7 +17,6 @@
       <th>Quantity</th>
       <th>Amount</th>
       <th>Pro number</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -30,13 +29,12 @@
         <td><%= delivery.season %></td>
         <td><%= delivery.farm_name %></td>
         <td><%= delivery.section %></td>
-        <td><%= delivery.type %></td>
+        <td><%= delivery.types %></td>
         <td><%= delivery.delivered_by %></td>
         <td><%= delivery.goods %></td>
         <td><%= delivery.quantity %></td>
         <td><%= delivery.amount %></td>
         <td><%= delivery.pro_number %></td>
-        <td><%= delivery.user_id %></td>
         <td><%= link_to 'Show', delivery %></td>
         <td><%= link_to 'Edit', edit_delivery_path(delivery) %></td>
         <td><%= link_to 'Destroy', delivery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -45,6 +43,5 @@
   </tbody>
 </table>
 
-<br>
 </div>
 
