--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'New Employee', new_employee_path, class:"button is-success my-3" %>
-
-<h1 class="has-background-white">Employees</h1>
+<div class='box outerdiv'>
+  <h1 class="has-background-white">Employees</h1>
 
 <table class="table">
   <thead>
@@ -35,3 +35,5 @@
     <% end %>
   </tbody>
 </table>
+
+</div>
