--- a/app/views/irriagtion_schedules/_form.html.erb
+++ b/app/views/irriagtion_schedules/_form.html.erb
@@ -26,9 +26,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :season, class:"input" %>
+      <%= form.text_field :season, value: season_active, type: :hidden %>
     </div>
   </div>
 
