--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Delivery', new_delivery_path, class:"button is-success my-3" %>
-<div class='box'>
+<div class='box outerdiv'>
 <h1>Deliveries</h1>
 
 <table class=" table has-background-white">
