--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -120,6 +120,7 @@
           <li><%= link_to 'Weather Updates', weathers_path, class:"has-text-white" %></li>
           <li><%= link_to 'Set Season', set_seasons_path, class:"has-text-white" %></li>
           <li><%= link_to 'Create Employees', employees_path, class:"has-text-white" %></li>
+          <li><%= link_to 'Farm Names', farm_names_path, class:"has-text-white" %></li>
         </ul>
       </div>
     </div>
