--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -42,7 +42,7 @@
     <div class="field">
       <%= form.label :type, class:"label" %>
       <div class="control">
-        <%= form.select :types, ['Fertiliser', 'Chemical', 'Fuel', 'Other'], class:"input" %>
+        <%= form.select :types, ['Fertiliser', 'Chemical', 'Fuel', 'Seed', 'Other'], class:"input" %>
       </div>
     </div>
 
