--- a/app/views/wages/_form.html.erb
+++ b/app/views/wages/_form.html.erb
@@ -32,9 +32,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :empoyee_number, class:"label" %>
+    <%= form.label :employee_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :empoyee_number, class:"input" %>
+      <%= form.text_field :employee_number, class:"input" %>
     </div>
   </div>
 
