--- a/app/views/wages/index.html.erb
+++ b/app/views/wages/index.html.erb
@@ -33,7 +33,7 @@
         <td><%= wage.company_name %></td>
         <td><%= wage.farm_name %></td>
         <td><%= wage.employee_name %></td>
-        <td><%= wage.empoyee_number %></td>
+        <td><%= wage.employee_number %></td>
         <td><%= wage.days_worked %></td>
         <td><%= wage.gross %></td>
         <td><%= wage.allowance %></td>
