--- a/app/views/layouts/_verification.html.erb
+++ b/app/views/layouts/_verification.html.erb
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-content">
         <div class="content">
-          <h2>Hello <%= current_user.username.upcase %> </h2>
+          <h2 class="has-text-centered">Hello <%= current_user.username.upcase %> </h2>
           <p class="has-text-centered">You are not verified yet</p>
           <p class="has-text-centered">Please Contact your Adminstrator for verification proccess</p>
           <p class="has-text-centered">Thank you</p>
