--- a/app/views/wages/new.html.erb
+++ b/app/views/wages/new.html.erb
@@ -166,7 +166,7 @@
         </div>
       </div>
 
-      <%= form.text_field :empoyee_number, value: deduction.employee_name, type: :hidden %>
+      <%= form.text_field :employee_number, value: deduction.employee_number, type: :hidden %>
       <%= form.text_field :employee_name, value: deduction.employee_name, type: :hidden %>
       <%= form.text_field :season, value: season_active, type: :hidden %>
       <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
