--- a/app/views/cash_requisitions/index.html.erb
+++ b/app/views/cash_requisitions/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Cash Requisition', new_cash_requisition_path, class:"button is-success my-3" %>
+<%= link_to 'New Cash Requisition', new_cash_requisition_path, class:"button btn-orange my-3" %>
 
 
-<div class="box">
+<div class="box outerdiv">
   <h1 class="has-text-centered"><strong>Cash Requisitions</strong></h1>
 
   <table class="table is-striped is-bordered">
