--- a/app/views/cash_requisitions/new.html.erb
+++ b/app/views/cash_requisitions/new.html.erb
@@ -1,9 +1,9 @@
-<div class="columns">
-  <div class="column">
-    <div class="card">
-      <div class="card-header">
-        <h1>New Cash Requisition</h1>
-      </div>
+<div class="columns is-centered">
+  <div class="column is-6">
+    <div class="card outerdiv">
+
+        <h1 class="has-text-centered"><strong>New Cash Requisition</strong></h1>
+
       <div class="card-content">
         <div class="content">
           <%= render 'form', cash_requisition: @cash_requisition %>
