Add changes cashflows

--- a/app/views/cashflows/index.html.erb
+++ b/app/views/cashflows/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Cashflow', new_cashflow_path, class:"button is-success my-3" %>
+<%= link_to 'New Cashflow', new_cashflow_path, class:"button btn-orange my-3" %>
 
-<div class="box">
+<div class="box outerdiv">
   <h1 class="has-text-centered"><strong>Cashflows</strong></h1>
 
   <table class="table is-striped is-bordered">
