--- a/app/views/cashflows/_form.html.erb
+++ b/app/views/cashflows/_form.html.erb
@@ -120,6 +120,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-success" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
