--- a/app/views/deduction_tables/index.html.erb
+++ b/app/views/deduction_tables/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Deduction Table', new_deduction_table_path, class:"button is-success my-3" %>
+<%= link_to 'New Deduction Table', new_deduction_table_path, class:"button btn-orange my-3" %>
 
-<div class="box">
+<div class="box outerdiv">
   <h1 class="has-text-centered">Deduction Tables</h1>
 
   <table class="table is-bordered is-striped">
