Add styles for cereal_stores

--- a/app/views/cereal_stores/index.html.erb
+++ b/app/views/cereal_stores/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Cereal Store', new_cereal_store_path, class:"button is-success my-3" %>
-<div class='box'>
+<%= link_to 'New Cereal Store', new_cereal_store_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
 <h1 class="has-background-white">Cereal Stores</h1>
 
 <table class="table">
