Add styles for deliveries

--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Delivery', new_delivery_path, class:"button is-success my-3" %>
+<%= link_to 'New Delivery', new_delivery_path, class:"button btn-orange my-3" %>
 <div class='box outerdiv'>
 <h1>Deliveries</h1>
 
