--- a/app/views/harvestings/_form.html.erb
+++ b/app/views/harvestings/_form.html.erb
@@ -55,6 +55,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-info" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
