--- a/app/views/harvestings/new.html.erb
+++ b/app/views/harvestings/new.html.erb
@@ -1,8 +1,8 @@
-<div class="columns">
-  <div class="column">
-    <div class="card">
-      <div class="card-header">
-        <h1>New Harvesting</h1>
+<div class="columns is-centered">
+  <div class="column is-6">
+    <div class="card outerdiv">
+      <div class="">
+        <h1 class="has-text-centered"><strong>New Harvesting</strong></h1>
       </div>
       <div class="card-content">
         <div class="content">
