--- a/app/views/rationings/index.html.erb
+++ b/app/views/rationings/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Rationing', new_rationing_path, class:"button is-success my-3" %>
-<div class='box'>
+<%= link_to 'New Rationing', new_rationing_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
 <h1 class="has-background-white">Rationings</h1>
 
 <table class="table">
@@ -38,7 +38,4 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
 </div>
-
