--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -99,7 +99,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit class:"button is-success" %>
+      <%= form.submit class:"button btn-orange" %>
     </div>
   <% end %>
 </div>
