Add styles for input_calibrations

--- a/app/views/workshops/new.html.erb
+++ b/app/views/workshops/new.html.erb
@@ -1,6 +1,6 @@
 <div class="columns is-centered">
   <div class="column is-6">
-    <div class="card outediv">
+    <div class="card outerdiv">
       <div class="">
         <h1 class="has-text-centered"><strong>New Workshop</strong></h1>
       </div>
