--- a/app/views/input_calibrations/index.html.erb
+++ b/app/views/input_calibrations/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Input Calibration', new_input_calibration_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Input Calibrations</h1>
+<%= link_to 'New Input Calibration', new_input_calibration_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered"><strong>Input Calibrations</strong></h1>
 
 <table class="table">
   <thead>
