Add changes to irrigation schedules

--- a/app/views/irriagtion_schedules/_form.html.erb
+++ b/app/views/irriagtion_schedules/_form.html.erb
@@ -98,6 +98,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-success" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
