--- a/app/views/irriagtion_schedules/index.html.erb
+++ b/app/views/irriagtion_schedules/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Irriagtion Schedule', new_irriagtion_schedule_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Irriagtion Schedules</h1>
+<%= link_to 'New Irriagtion Schedule', new_irriagtion_schedule_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered"><strong>Irriagtion Schedules</strong></h1>
 
 <table class="table">
   <thead>
