--- a/app/views/land_names/index.html.erb
+++ b/app/views/land_names/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Land Name', new_land_name_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Land Names</h1>
+<%= link_to 'New Land Name', new_land_name_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered"><strong>Land Names</strong></h1>
 
 <table class="table">
   <thead>
