--- a/app/views/rainfalls/index.html.erb
+++ b/app/views/rainfalls/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Rainfall', new_rainfall_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Rainfalls</h1>
+<%= link_to 'New Rainfall', new_rainfall_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered"><strong>Rainfalls</strong></h1>
 
 <table class="table">
   <thead>
