Add more changes

--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,8 +1,8 @@
 <div class="columns is-centered">
-  <div class="column is-12">
-    <div class="card">
-      <header class="card-header">
-        <h1><strong> New Activity</strong></h1>
+  <div class="column is-6">
+    <div class="card outerdiv">
+      <header class="">
+        <h1 class="has-text-centered"><strong> New Activity</strong></h1>
       </header>
       <div class="card-content">
         <div class="content">
