--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'New Activity', new_activity_path, class:"button is-success my-3" %>
+<%= link_to 'New Activity', new_activity_path, class:"button btn-orange my-3" %>
 
-<div class="box">
-  <h1 class="has-text-centered">Activities</h1>
+<div class="box outerdiv">
+  <h1 class="has-text-centered"><strong>Activities</strong></h1>
 
   <table class="table">
     <thead>
