--- a/app/views/daily_requisitions/index.html.erb
+++ b/app/views/daily_requisitions/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Daily Requisition', new_daily_requisition_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Daily Requisitions</h1>
+<%= link_to 'New Daily Requisition', new_daily_requisition_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered"><strong>Daily Requisitions</strong></h1>
 
 <table class="table">
   <thead>
