--- a/app/views/cereal_sales/index.html.erb
+++ b/app/views/cereal_sales/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Cereal Sale', new_cereal_sale_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Cereal Sales</h1>
+<%= link_to 'New Cereal Sale', new_cereal_sale_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered">Cereal Sales</h1>
 
 <table class="table">
   <thead>
