--- a/app/views/field_days/_form.html.erb
+++ b/app/views/field_days/_form.html.erb
@@ -41,6 +41,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-info" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
