--- a/app/views/field_days/index.html.erb
+++ b/app/views/field_days/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Field Day', new_field_day_path, class:"button is-success my-3" %>
-<div class='box'>
-<h1 class="has-background-white">Field Days</h1>
+<%= link_to 'New Field Day', new_field_day_path, class:"button btn-orange my-3" %>
+<div class='box outerdiv'>
+<h1 class="has-text-centered"><strong>Field Days</strong></h1>
 
 <table class="table">
   <thead>
